--- a/www.nass.gov.ng/3184ac4a329fcdcc4b586b278da87ad06d3dfae1.yml
+++ b/www.nass.gov.ng/3184ac4a329fcdcc4b586b278da87ad06d3dfae1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 23:07:46 GMT
+    - Fri, 16 Jun 2017 02:24:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=EnxKoMrm-UbO2RXoHTauq3; path=/
+    - PHPSESSID=M5cVLafH%2Cts72kVFP9kuR2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 23:07:46 GMT
+recorded_at: Fri, 16 Jun 2017 02:24:58 GMT
