--- a/www.nass.gov.ng/13262617d2b017b334ae92b50d8b3d79cb11d0ff.yml
+++ b/www.nass.gov.ng/13262617d2b017b334ae92b50d8b3d79cb11d0ff.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 23:09:22 GMT
+    - Fri, 16 Jun 2017 02:25:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0MLIJ%2CfhrRlOTP1gFLp4k0; path=/
+    - PHPSESSID=ephp1eOC1c1Z6Xg3nZJYf3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 23:09:22 GMT
+recorded_at: Fri, 16 Jun 2017 02:25:53 GMT
