--- a/www.nass.gov.ng/b486f602dbdefbe6ead2a88b3a53a7bfa2d1eb70.yml
+++ b/www.nass.gov.ng/b486f602dbdefbe6ead2a88b3a53a7bfa2d1eb70.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 23:10:48 GMT
+    - Fri, 16 Jun 2017 02:27:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KCJRQgl4XZE3S3UiG2zbF0; path=/
+    - PHPSESSID=Cqf9iA1FEo46t2I%2Cbx-eM0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 23:10:48 GMT
+recorded_at: Fri, 16 Jun 2017 02:27:00 GMT
