--- a/www.nass.gov.ng/9d72cdb971135abeff1fd76f9afd94b45f62b734.yml
+++ b/www.nass.gov.ng/9d72cdb971135abeff1fd76f9afd94b45f62b734.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 23:14:46 GMT
+    - Fri, 16 Jun 2017 02:30:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DqOyzu-Fh%2CBOA3tjnMNuT3; path=/
+    - PHPSESSID=UDLgiD3GptctnXVAYJF2p3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 23:14:46 GMT
+recorded_at: Fri, 16 Jun 2017 02:30:33 GMT
