--- a/www.nass.gov.ng/120265e3af1963b3f01bce8244da64988abfab43.yml
+++ b/www.nass.gov.ng/120265e3af1963b3f01bce8244da64988abfab43.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 21:40:40 GMT
+    - Sat, 17 Jun 2017 22:33:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KJ3G1FWhEWhILH9nDsr8W3; path=/
+    - PHPSESSID=SfestXmauHuu8ugSY%2CdGP2; path=/
     Vary:
     - Accept-Encoding
     Transfer-Encoding:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 21:40:40 GMT
+recorded_at: Sat, 17 Jun 2017 22:33:14 GMT
