--- a/www.nass.gov.ng/b00c4e122f074429f834bc77b20657898a386d22.yml
+++ b/www.nass.gov.ng/b00c4e122f074429f834bc77b20657898a386d22.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 21:49:04 GMT
+    - Sat, 17 Jun 2017 22:42:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=N7z%2C9LcqSU58jJhOTVcm10; path=/
+    - PHPSESSID=Iu0Y4zGBFB4Guk0N0a1zy1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 21:49:04 GMT
+recorded_at: Sat, 17 Jun 2017 22:42:12 GMT
