--- a/www.nass.gov.ng/9c9c59a133490bd66ecc0787e95605a29a197f20.yml
+++ b/www.nass.gov.ng/9c9c59a133490bd66ecc0787e95605a29a197f20.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 21:54:49 GMT
+    - Sat, 17 Jun 2017 22:48:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=SE6aMep-zXGDdiHzI%2Csgm2; path=/
+    - PHPSESSID=d3EVvzVdYjXhcg0yxcwTO3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 21:54:49 GMT
+recorded_at: Sat, 17 Jun 2017 22:48:13 GMT
