--- a/www.nass.gov.ng/e453cba713abf2acd595ca0c278bf195cede46ef.yml
+++ b/www.nass.gov.ng/e453cba713abf2acd595ca0c278bf195cede46ef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 21:57:06 GMT
+    - Sat, 17 Jun 2017 22:50:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zaJVaggYrEJJU1qP8HzaE0; path=/
+    - PHPSESSID=K2nsU2T%2CAbaHbTs1oN9-k1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 21:57:06 GMT
+recorded_at: Sat, 17 Jun 2017 22:50:03 GMT
