--- a/www.nass.gov.ng/1c55ebf8f0f635dad588c2e975f29339fe53b8b3.yml
+++ b/www.nass.gov.ng/1c55ebf8f0f635dad588c2e975f29339fe53b8b3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 21:57:37 GMT
+    - Sat, 17 Jun 2017 22:50:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-mk2LTwNe%2CfA9P8-r%2C9y50; path=/
+    - PHPSESSID=zp6C6j9-dDDtX9zFsCZxB1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 21:57:37 GMT
+recorded_at: Sat, 17 Jun 2017 22:50:39 GMT
