--- a/www.nass.gov.ng/d6e9316c52882b39e14c601a30fdd03e08b4c0eb.yml
+++ b/www.nass.gov.ng/d6e9316c52882b39e14c601a30fdd03e08b4c0eb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 21:58:11 GMT
+    - Sat, 17 Jun 2017 22:52:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Tot938nRiqEQa4%2C%2CtVpM52; path=/
+    - PHPSESSID=tn-iVS3EUmBbElbKbLaTR1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 21:58:11 GMT
+recorded_at: Sat, 17 Jun 2017 22:52:03 GMT
