--- a/www.nass.gov.ng/fa6f71e6471628304598bee966338dfb5286e246.yml
+++ b/www.nass.gov.ng/fa6f71e6471628304598bee966338dfb5286e246.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 21:59:55 GMT
+    - Sat, 17 Jun 2017 22:53:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=V%2C1yWfNS1WqCS0xhLzz7E1; path=/
+    - PHPSESSID=8EMuuddvhZ9wc518qTtxQ0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 21:59:55 GMT
+recorded_at: Sat, 17 Jun 2017 22:53:36 GMT
