--- a/www.nass.gov.ng/11399bf89975f536eabf6e3b1865080e3f229eeb.yml
+++ b/www.nass.gov.ng/11399bf89975f536eabf6e3b1865080e3f229eeb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:02:20 GMT
+    - Sat, 17 Jun 2017 22:55:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=A6zqCVjzBS2AU2kPyk30P2; path=/
+    - PHPSESSID=RwCWa1Fz6KoI%2C261TjJq12; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:02:20 GMT
+recorded_at: Sat, 17 Jun 2017 22:55:21 GMT
