--- a/www.nass.gov.ng/8bc25746e70c81af9923ada2a6c519bcd6972f50.yml
+++ b/www.nass.gov.ng/8bc25746e70c81af9923ada2a6c519bcd6972f50.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:06:50 GMT
+    - Sat, 17 Jun 2017 23:00:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=H6I%2CiQJqY0SoGDGwe9bkj3; path=/
+    - PHPSESSID=0ykHhSOK0tm%2CV7PaQBjXN0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:06:50 GMT
+recorded_at: Sat, 17 Jun 2017 23:00:28 GMT
