--- a/www.nass.gov.ng/0e4f619efb60821b689e0080d92a64319bc46214.yml
+++ b/www.nass.gov.ng/0e4f619efb60821b689e0080d92a64319bc46214.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:10:22 GMT
+    - Sat, 17 Jun 2017 23:04:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tDpEtExmEm%2CUBhETyDtvO3; path=/
+    - PHPSESSID=3kchdZ5ZZ4%2CgXw%2Cs08tLH1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:10:23 GMT
+recorded_at: Sat, 17 Jun 2017 23:04:19 GMT
