--- a/www.nass.gov.ng/f826858269bcf56e5518f7ad19c8282a4c4aaaf3.yml
+++ b/www.nass.gov.ng/f826858269bcf56e5518f7ad19c8282a4c4aaaf3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:13:34 GMT
+    - Sat, 17 Jun 2017 23:06:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-2Bo8CbjijzOV4UIy9HqZ0; path=/
+    - PHPSESSID=WckMq7rWajdza93aa%2Ca-p2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:13:35 GMT
+recorded_at: Sat, 17 Jun 2017 23:06:48 GMT
