--- a/www.nass.gov.ng/25e90f8b2b68218038c54dba2b366a0c707d2407.yml
+++ b/www.nass.gov.ng/25e90f8b2b68218038c54dba2b366a0c707d2407.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:14:19 GMT
+    - Sat, 17 Jun 2017 23:08:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xFcYLECQHjBmTZgpl%2ClVf3; path=/
+    - PHPSESSID=K9Sx7NQm5Qud0IFCqZ9Bb3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:14:19 GMT
+recorded_at: Sat, 17 Jun 2017 23:08:15 GMT
