--- a/www.nass.gov.ng/d2ab87c5c04ea37340ba6643e9b66bba86faf62f.yml
+++ b/www.nass.gov.ng/d2ab87c5c04ea37340ba6643e9b66bba86faf62f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:16:13 GMT
+    - Sat, 17 Jun 2017 23:10:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=F6%2CtOWM3dCQNOUNMtAUQI0; path=/
+    - PHPSESSID=85tB%2CVNNPKa7EnbnxKgcU3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:16:13 GMT
+recorded_at: Sat, 17 Jun 2017 23:10:01 GMT
