--- a/www.nass.gov.ng/58ea058c2eef55fd37862f67b5862d0b2e987e2b.yml
+++ b/www.nass.gov.ng/58ea058c2eef55fd37862f67b5862d0b2e987e2b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:20:34 GMT
+    - Sat, 17 Jun 2017 23:15:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Qz-p9IeR%2CBBP8CMMVh6-r0; path=/
+    - PHPSESSID=213az-DiB-R173ZZST6RR0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:20:35 GMT
+recorded_at: Sat, 17 Jun 2017 23:15:26 GMT
