--- a/www.nass.gov.ng/f48bc6229c8c6db7ec2e751c9e18561b98fe3ff6.yml
+++ b/www.nass.gov.ng/f48bc6229c8c6db7ec2e751c9e18561b98fe3ff6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:21:12 GMT
+    - Sat, 17 Jun 2017 23:16:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4psQ9xmVAWF0J0Y%2CdrTBl1; path=/
+    - PHPSESSID=8MwBG2QXsVEG0gK9gSEwa0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:21:12 GMT
+recorded_at: Sat, 17 Jun 2017 23:16:30 GMT
