--- a/www.nass.gov.ng/8963db36243ad69fab651a024c206e2570e97b00.yml
+++ b/www.nass.gov.ng/8963db36243ad69fab651a024c206e2570e97b00.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:24:33 GMT
+    - Sat, 17 Jun 2017 23:19:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CDvaB%2C8CqMRCtntedQDl30; path=/
+    - PHPSESSID=b3ZVIkJG7ppnU5h2iqnD91; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:24:33 GMT
+recorded_at: Sat, 17 Jun 2017 23:19:16 GMT
