--- a/www.nass.gov.ng/9ff977dd060d641fd2a4b23978664f9358bab511.yml
+++ b/www.nass.gov.ng/9ff977dd060d641fd2a4b23978664f9358bab511.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:28:25 GMT
+    - Sat, 17 Jun 2017 23:24:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ohyl4i34%2CSCN2ryxBvPQO3; path=/
+    - PHPSESSID=bAFGfofAhg5vehD9RY2at1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:28:25 GMT
+recorded_at: Sat, 17 Jun 2017 23:24:51 GMT
