--- a/www.nass.gov.ng/a57edb402cce30220815226d5ca2c349c389e39c.yml
+++ b/www.nass.gov.ng/a57edb402cce30220815226d5ca2c349c389e39c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:32:41 GMT
+    - Sat, 17 Jun 2017 23:28:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CJnpg-jDGQ9SO2Ugb9bE63; path=/
+    - PHPSESSID=EDbS-6ISllzbNCIM8J%2CEU1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:32:41 GMT
+recorded_at: Sat, 17 Jun 2017 23:28:36 GMT
