--- a/www.nass.gov.ng/e9b4cee69bbfb51e65473160f50add380372a85f.yml
+++ b/www.nass.gov.ng/e9b4cee69bbfb51e65473160f50add380372a85f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:32:59 GMT
+    - Sat, 17 Jun 2017 23:28:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=STmB1Sd5-CNVToDgOf39o0; path=/
+    - PHPSESSID=kIdP-Cl2xqi6m%2Cabc3l7n2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:32:59 GMT
+recorded_at: Sat, 17 Jun 2017 23:28:54 GMT
