--- a/www.nass.gov.ng/9126db741cb9da37fc8f926acb20106ebe2be03e.yml
+++ b/www.nass.gov.ng/9126db741cb9da37fc8f926acb20106ebe2be03e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:34:59 GMT
+    - Sat, 17 Jun 2017 23:30:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CdYI2Lx5dQAfnHGTt3O%2Ci3; path=/
+    - PHPSESSID=sv9UvvD2h0ocw6BA4-kB-0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:34:59 GMT
+recorded_at: Sat, 17 Jun 2017 23:30:44 GMT
