--- a/www.nass.gov.ng/582557c62f5d523810a7a1fa2fbb52fd343b87e7.yml
+++ b/www.nass.gov.ng/582557c62f5d523810a7a1fa2fbb52fd343b87e7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:37:52 GMT
+    - Sat, 17 Jun 2017 23:34:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=13oeq6nNrBYdoj09oFkGP1; path=/
+    - PHPSESSID=NtsTAlhCXFRNR%2CV6Kh2Zz0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:37:52 GMT
+recorded_at: Sat, 17 Jun 2017 23:34:09 GMT
