--- a/www.nass.gov.ng/43e341d81361b01b02276ceea0329c0c7f913df1.yml
+++ b/www.nass.gov.ng/43e341d81361b01b02276ceea0329c0c7f913df1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:38:31 GMT
+    - Sat, 17 Jun 2017 23:35:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lFPHcQR%2CIPm0Da83X3Oy32; path=/
+    - PHPSESSID=NO6tCGADkn2k0QvTlKMDD1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:38:31 GMT
+recorded_at: Sat, 17 Jun 2017 23:35:36 GMT
