--- a/www.nass.gov.ng/fbc433dcdf277837d2aca741990bdf8431cbb502.yml
+++ b/www.nass.gov.ng/fbc433dcdf277837d2aca741990bdf8431cbb502.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:38:49 GMT
+    - Sat, 17 Jun 2017 23:35:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=OtGIT19H8E%2CnBAsRrb0GC0; path=/
+    - PHPSESSID=5VeSkqNvu4O3Y95omhYz91; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:38:50 GMT
+recorded_at: Sat, 17 Jun 2017 23:35:54 GMT
