--- a/www.nass.gov.ng/e75f63f26d813a4b33f1630fe8bfc6bd9e4da943.yml
+++ b/www.nass.gov.ng/e75f63f26d813a4b33f1630fe8bfc6bd9e4da943.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:39:08 GMT
+    - Sat, 17 Jun 2017 23:36:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2Ctz4UQyyWBsut34WIjezV3; path=/
+    - PHPSESSID=LadV1JlTdXfuh1YhuGpOB1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:39:08 GMT
+recorded_at: Sat, 17 Jun 2017 23:36:13 GMT
