--- a/www.nass.gov.ng/66908c81f871684913e6313fd6ffdd48f325c222.yml
+++ b/www.nass.gov.ng/66908c81f871684913e6313fd6ffdd48f325c222.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:40:22 GMT
+    - Sat, 17 Jun 2017 23:38:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8Fw-fNrcSQ98%2C%2Coq3WlYp1; path=/
+    - PHPSESSID=U6jduEKDoBx3-mAIoPeRw3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:40:22 GMT
+recorded_at: Sat, 17 Jun 2017 23:38:59 GMT
