--- a/www.nass.gov.ng/8010f57784f2dc84c0457efaa30f4b2e87a93a79.yml
+++ b/www.nass.gov.ng/8010f57784f2dc84c0457efaa30f4b2e87a93a79.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:56:23 GMT
+    - Sat, 17 Jun 2017 23:53:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fviipXslImOfNvxJGUwIw2; path=/
+    - PHPSESSID=dRvGt2EM0uJLw%2CufGMz2X0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:56:23 GMT
+recorded_at: Sat, 17 Jun 2017 23:53:20 GMT
