--- a/www.nass.gov.ng/292abf35efa1888e305bf4e7cc38c7b47eab27f7.yml
+++ b/www.nass.gov.ng/292abf35efa1888e305bf4e7cc38c7b47eab27f7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:56:48 GMT
+    - Sat, 17 Jun 2017 23:54:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=C5GpyZeqWPS1dbD%2Chxtmj0; path=/
+    - PHPSESSID=VV33Bt1FgCWgE3OHM%2Cw%2CH2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:56:48 GMT
+recorded_at: Sat, 17 Jun 2017 23:54:28 GMT
