--- a/www.nass.gov.ng/abcd883fbfadf2868b3440aebca41cf8190de939.yml
+++ b/www.nass.gov.ng/abcd883fbfadf2868b3440aebca41cf8190de939.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:57:09 GMT
+    - Sat, 17 Jun 2017 23:54:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VP6WPD-wd3mt9RE2HAC4y0; path=/
+    - PHPSESSID=am15vHJaJ9aPZo%2CAqx%2Ce91; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:57:09 GMT
+recorded_at: Sat, 17 Jun 2017 23:54:57 GMT
