--- a/www.nass.gov.ng/325aa062b074b1e45b95fbde3a031314d612f727.yml
+++ b/www.nass.gov.ng/325aa062b074b1e45b95fbde3a031314d612f727.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 22:58:42 GMT
+    - Sat, 17 Jun 2017 23:56:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CLvRjsYQhSOTh-BZjJe9R1; path=/
+    - PHPSESSID=j6sNCO3EuRMVtrOLKPX5q3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 22:58:42 GMT
+recorded_at: Sat, 17 Jun 2017 23:56:01 GMT
