--- a/www.nass.gov.ng/e3c8235d623bb367bfe377878e271725f758ee35.yml
+++ b/www.nass.gov.ng/e3c8235d623bb367bfe377878e271725f758ee35.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 15 Jun 2017 23:00:09 GMT
+    - Sat, 17 Jun 2017 23:57:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=imIhlRSuqkwvC7a6D7KG80; path=/
+    - PHPSESSID=uk6fFjpD6omoW%2C5OsnQ-Q0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 15 Jun 2017 23:00:09 GMT
+recorded_at: Sat, 17 Jun 2017 23:57:57 GMT
